Finish getting things compiling.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <script src="elm.js"></script>
   </head>
-  <body id="page-body">
+  <body>
     <script>
-      var app = Elm.Main.fullscreen(localStorage.session || null);
+      var app = Elm.Main.init(localStorage.session || null);
 
       app.ports.storeSession.subscribe(function(session) {
         localStorage.session = session;
